--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "astro"]
 	path = astro
 	url = https://github.com/SmashMex1369/astro.git
+[submodule "django"]
+	path = django
+	url = https://github.com/SmashMex1369/django.git
