--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "django"]
 	path = django
 	url = https://github.com/SmashMex1369/django.git
+[submodule "next"]
+	path = next
+	url = https://github.com/SmashMex1369/next.git
